--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,20 @@
 {
     "version": 2,
-    "functions": {
-        "api/index.js": {
-            "runtime": "nodejs18.x"
-        }
-    },
+    "builds": [{
+        "src": "server.js",
+        "use": "@vercel/node"
+    }],
     "routes": [{
             "src": "/socket.io/(.*)",
-            "dest": "/api/index.js"
+            "dest": "/server.js"
         },
         {
             "src": "/board/(.*)",
-            "dest": "/api/index.js"
+            "dest": "/server.js"
         },
         {
             "src": "/(.*)",
-            "dest": "/api/index.js"
+            "dest": "/server.js"
         }
     ],
     "env": {
