--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,15 @@
 {
-    "version": 2,
-    "builds": [{
-        "src": "server.js",
-        "use": "@vercel/node"
-    }],
-    "routes": [{
-            "src": "/socket.io/(.*)",
-            "dest": "/server.js"
-        },
-        {
-            "src": "/board/(.*)",
-            "dest": "/server.js"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/server.js"
-        }
-    ],
-    "env": {
-        "NODE_ENV": "production"
+  "version": 2,
+  "builds": [
+    {
+      "src": "server.js",
+      "use": "@vercel/node"
     }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/server.js"
+    }
+  ]
 }
