--- a/package.json
+++ b/package.json
@@ -1,23 +1,21 @@
 {
-    "name": "collaborative-whiteboard",
-    "version": "1.0.0",
-    "description": "A real-time collaborative whiteboard application",
-    "main": "server.js",
-    "scripts": {
-        "start": "node server.js",
-        "dev": "nodemon server.js",
-        "build": "echo 'No build step required'",
-        "vercel-build": "echo 'No build step required'"
-    },
-    "dependencies": {
-        "express": "^4.18.2",
-        "socket.io": "^4.7.2",
-        "uuid": "^9.0.1"
-    },
-    "devDependencies": {
-        "nodemon": "^3.0.1"
-    },
-    "engines": {
-        "node": ">=18.0.0"
-    }
+  "name": "collaborative-whiteboard",
+  "version": "1.0.0",
+  "description": "A real-time collaborative whiteboard application",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "socket.io": "^4.7.2",
+    "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  }
 }
